Se cambia el disenio de la aplicacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
 
 
     <!-- Menu Options -->
-    <string name="buys">Compras</string>
-    <string name="prices">Precios</string>
+    <string name="buys">Buys</string>
+    <string name="rates">Rates</string>
+    <string name="products">Products</string>
+
 
 </resources>
