Se cambia el estilo de los edittext que se van a agregar en la aplicacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <!-- Dialog Titles -->
     <string name="title_new_product">New Product</string>
 
+
+    <!-- Dialogs' Textviews -->
+    <string name="product_name">PRODUCT NAME</string>
+    <string name="description">Description</string>
+
 </resources>
