Se agrega el grid de iconos para poder seleeccionar uno cuando se va a agregar un producto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <!-- Dialogs' Textviews -->
     <string name="product_name">PRODUCT NAME</string>
     <string name="description">Description</string>
+    <string name="select_icon">Select Icon</string>
 
 </resources>
