--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="description">Description</string>
     <string name="select_icon">Select Icon</string>
 
+
+    <!--Error Strings -->
+    <string name="error_product_name_invalid">Invalid Name</string>
+    <string name="error_product_description_invalid">Invalid Description</string>
+
 </resources>
