--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <!--Error Strings -->
     <string name="error_product_name_invalid">Invalid Name</string>
     <string name="error_product_description_invalid">Invalid Description</string>
+    <string name="error_product_not_selected_icon">Select Icon</string>
 
 </resources>
