Al seleccionar un producto se activa y se desactiva el campo para ingresar el precio del producto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,11 @@
     <string name="error_product_name_invalid">Invalid Name</string>
     <string name="error_product_description_invalid">Invalid Description</string>
     <string name="error_product_not_selected_icon">Select Icon</string>
+    
+    
+    <!-- Marks -->
+    <string name="dollar">$</string>
+    <string name="per_unit">each unit</string>
+    <string name="price">Price</string>
 
 </resources>
